Added simple user login to get the authorization token
