# src/util/validation/user.validation.js
@@ -1,0 +1,10 @@
+const { body } = require('express-validator')
+
+module.exports = {
+    login: () => {
+        return [
+            body('username').not().isEmpty().isString(),
+            body('password').not().isEmpty().isString(),
+        ]
+    },
+}
